# python-test-automation

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  TODO.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: tester-guide.md
sampleapi/: Dockerfile  app.py  requirements.txt
sampleapp/: Dockerfile  package-lock.json  package.json
sampleapp/src/: App.jsx
src/testplatform/: __init__.py  __main__.py  api.py  assertions.py  browsers.py  config.py  db.py
src/testplatform/pages/: __init__.py  base.py
tests/e2e/: conftest.py  test_full_stack.py  test_sample_app.py
tests/e2e/pages/: sample_app.py
tests/integration/: conftest.py  test_mongo.py  test_sample_api.py
tests/unit/: conftest.py  fakes.py  test_api.py  test_assertions.py  test_base_page.py  test_browsers.py  test_config.py  test_db.py  test_db_assertions.py  test_main.py  test_seeding.py
