[project]
name = "python-test-automation"
version = "0.1.0"
description = "Automated testing platform for React UIs, REST APIs, and MongoDB"
authors = [
    { name = "Nick Baynham", email = "nickbaynham@gmail.com" },
]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.14"
dependencies = ["pydantic-settings>=2.14.1"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "ruff>=0.15.16",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pip-audit>=2.10.0",
]

[tool.ruff]
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # import sorting
    "N",   # pep8 naming
    "UP",  # modern syntax upgrades
    "B",   # bugbear
    "SIM", # simplification
    "RUF", # ruff-specific rules
    "S",   # security (bandit rules)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # pytest assertions are asserts by design

[tool.mypy]
python_version = "3.14"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=testplatform --cov-branch --cov-report=term-missing"

[tool.coverage.report]
fail_under = 90
exclude_also = ['if __name__ == "__main__":']
